# stream-mx-inspector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
.idx/: dev.nix
config/akhq/: application.yml
config/loader/: gumi_dev.yaml  gumi_prod.yaml
config/processor/: dev.yaml
parsed_message_connector/: Dockerfile  akhq-values.yaml  docker-compose.yml  kafka-connect.yaml  s3-sink-connector.yaml  schema-registry.yaml  setup_kafka_on_minikube.sh
parsed_message_writer/: app.py  config.py  spark_session.py
parsed_message_writer/processor/: inspector_log_writer.py
parserd_message_loader/: app.py
parserd_message_loader.py/: app.py
raw_message_processor/: app.py  config.py  exceptions.py  logger.py  schema.py
raw_message_processor/parser/: base.py  inspector_log_parser.py
raw_message_processor/parsers/: __init__.py  base.py  inspector_log_parser.py
schema/: full_inspector_message.avsc  full_message.avsc  full_message.json  master_message.json  partial_inspector_message.avsc  summary_message.avsc
utils/: logger.py  mes_api.py  spark.py
