[project]
name = "stream-mx-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "confluent-kafka[avro]>=2.11.0",
    "fastavro>=1.11.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "uvloop>=0.21.0",
]
